--- a/csapp/malloc/README
+++ b/csapp/malloc/README
@@ -7,6 +7,14 @@
 #
 ######################################################################
 
+//////////////////
+steps to check correct:
+make
+./mdriver -v/V -f short1-bal.rep
+./mdriver -v
+//////////////////
+
+
 ***********
 Main Files:
 ***********
